# mephi_lab1

./: CMakeLists.txt  Error.h  data_structure.c  data_structure.h  main.c  test.c  test.h  type_info.h  typeinfo.c  typeinfo.h
data_structure/: data_structure.c  data_structure.h
test/: test.c  test.h
type/: char_type.c  html_type.c  type_info.h  typeinfo.h  wchar_type.c
ui/: ui.c  ui.h
